[gd_scene load_steps=6 format=2]

[ext_resource path="res://item/Item.gd" type="Script" id=1]
[ext_resource path="res://assets/sprites/log.png" type="Texture" id=2]
[ext_resource path="res://assets/theme/theme.tres" type="Theme" id=3]
[ext_resource path="res://item/ItemDesc.tscn" type="PackedScene" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 22, 21 )

[node name="Item" type="Area2D"]
z_index = 1
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 21, 21 )
scale = Vector2( 2, 2 )
texture = ExtResource( 2 )

[node name="StackAmountLabel" type="Label" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 25.0
margin_right = 43.0
margin_bottom = 45.0
theme = ExtResource( 3 )
custom_colors/font_color_shadow = Color( 0.243137, 0.0862745, 0.027451, 0.752941 )
custom_constants/shadow_as_outline = 4
text = "10"
align = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 22, 21 )
shape = SubResource( 1 )

[node name="ItemDesc" parent="." instance=ExtResource( 4 )]
visible = false

[connection signal="mouse_entered" from="." to="." method="_on_Item_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Item_mouse_exited"]
